@@ -86,8 +86,8 @@ namespace MyMediaLite.RatingPrediction
 			// init factor matrices
 			user_factors = new Matrix<double>(Ratings.MaxUserID + 1, NumFactors);
 			item_factors = new Matrix<double>(Ratings.MaxItemID + 1, NumFactors);
-			MatrixUtils.RowInitNormal(user_factors, InitMean, InitStdev);
-			MatrixUtils.RowInitNormal(item_factors, InitMean, InitStdev);
+			MatrixUtils.InitNormal(user_factors, InitMean, InitStdev);
+			MatrixUtils.InitNormal(item_factors, InitMean, InitStdev);
 		}
 
 		///
