@@ -43,8 +43,8 @@ namespace MyMediaLite.AttrToFactor
 			Console.Error.WriteLine("num_item_attributes=" + NumItemAttributes);
 			Console.Error.WriteLine("num_hidden_factors=" + num_hidden_factors);
 
-			MatrixUtils.RowInitNormal(attribute_to_factor, InitMean, InitStdev);
-			MatrixUtils.RowInitNormal(output_layer, InitMean, InitStdev);
+			MatrixUtils.InitNormal(attribute_to_factor, InitMean, InitStdev);
+			MatrixUtils.InitNormal(output_layer, InitMean, InitStdev);
 
 			//Console.Error.WriteLine("iteration -1 fit {0,0:0.#####} ", ComputeFit());
 			for (int i = 0; i < num_iter_mapping; i++)
